--- a/Game_of_Rock,_Paper,_Scissors.ipynb
+++ b/Game_of_Rock,_Paper,_Scissors.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPE2LE1MyTu3Vl0Z/YoUSqu",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z0BeswqI3_p-",
-        "outputId": "e3831d51-b1e4-42ee-fcc5-6053a2802331"
+        "outputId": "c460a961-9a1e-4b3c-c89f-dfbe3d67c10c"
       },
       "outputs": [
         {
@@ -42,13 +26,14 @@
           "name": "stdout",
           "text": [
             "Enter your choice of \"Rock\", \"Paper\", or \"Scissors\": paper\n",
-            "The computer's selected: rock\n",
+            "The computer's selected: paper\n",
             "\n",
-            "Paper wraps rock. You WIN!\n",
+            "It's a draw! Play until there is a Winner!\n",
             "Enter your choice of \"Rock\", \"Paper\", or \"Scissors\": paper\n",
             "The computer's selected: scissors\n",
             "\n",
-            "Scissors cuts paper. The computer WINS!\n"
+            "Scissors cuts paper. The computer WINS!\n",
+            "Thanks for playing.\n"
           ]
         }
       ],
@@ -66,8 +51,6 @@
         "\n",
         "def main():\n",
         "    winner()\n",
-        "    user_choice()\n",
-        "    computer_choice()\n",
         "\n",
         "\n",
         "def user_choice():\n",
@@ -90,19 +73,25 @@
         "        player = user_choice()\n",
         "        computer = computer_choice()\n",
         "        if player == computer:\n",
-        "            print(\"It's a draw! Play until there is a Winner!\")\n",
+        "          print(\"It's a draw! Play until there is a Winner!\")\n",
         "        elif player == \"rock\" and computer == \"scissors\":\n",
         "            print(\"Rock smashes scissors. You WIN!\")\n",
+        "            break\n",
         "        elif player == \"scissors\" and computer == \"paper\":\n",
         "            print(\"Scissors cuts paper. You WIN!\")\n",
+        "            break\n",
         "        elif player == \"paper\" and computer == \"rock\":\n",
         "            print(\"Paper wraps rock. You WIN!\")\n",
+        "            break\n",
         "        elif computer == \"rock\" and player == \"scissors\":\n",
         "            print(\"Rock smashes scissors. The computer WINS!\")\n",
+        "            break\n",
         "        elif computer == \"scissors\" and player == \"paper\":\n",
         "            print(\"Scissors cuts paper. The computer WINS!\")\n",
+        "            break\n",
         "        elif computer == \"paper\" and player == \"rock\":\n",
         "            print(\"Paper wraps rock. The computer WINS! \")\n",
+        "            break\n",
         "    return champ\n",
         "\n",
         "\n",
@@ -111,5 +100,21 @@
         "print('Thanks for playing.')"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyMTMUK7cAEOh2mXjk9F5vHO",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
