--- a/Game_of_Rock,_Paper,_Scissors.ipynb
+++ b/Game_of_Rock,_Paper,_Scissors.ipynb
@@ -12,28 +12,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z0BeswqI3_p-",
-        "outputId": "c460a961-9a1e-4b3c-c89f-dfbe3d67c10c"
+        "outputId": "34266b3f-f4a1-4081-9845-63f80843919d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Enter your choice of \"Rock\", \"Paper\", or \"Scissors\": paper\n",
-            "The computer's selected: paper\n",
-            "\n",
-            "It's a draw! Play until there is a Winner!\n",
-            "Enter your choice of \"Rock\", \"Paper\", or \"Scissors\": paper\n",
             "The computer's selected: scissors\n",
             "\n",
             "Scissors cuts paper. The computer WINS!\n",
-            "Thanks for playing.\n"
+            "The computer's selected: rock\n",
+            "\n",
+            "Paper wraps rock. You WIN!\n",
+            "The computer's selected: paper\n",
+            "\n",
+            "It's a draw! Play until there is a Winner!\n"
           ]
         }
       ],
@@ -75,23 +76,23 @@
         "        if player == computer:\n",
         "          print(\"It's a draw! Play until there is a Winner!\")\n",
         "        elif player == \"rock\" and computer == \"scissors\":\n",
-        "            print(\"Rock smashes scissors. You WIN!\")\n",
-        "            break\n",
+        "          print(\"Rock smashes scissors. You WIN!\")\n",
+        "          break\n",
         "        elif player == \"scissors\" and computer == \"paper\":\n",
-        "            print(\"Scissors cuts paper. You WIN!\")\n",
-        "            break\n",
+        "          print(\"Scissors cuts paper. You WIN!\")\n",
+        "          break\n",
         "        elif player == \"paper\" and computer == \"rock\":\n",
-        "            print(\"Paper wraps rock. You WIN!\")\n",
-        "            break\n",
+        "          print(\"Paper wraps rock. You WIN!\")\n",
+        "          break\n",
         "        elif computer == \"rock\" and player == \"scissors\":\n",
-        "            print(\"Rock smashes scissors. The computer WINS!\")\n",
-        "            break\n",
+        "          print(\"Rock smashes scissors. The computer WINS!\")\n",
+        "          break\n",
         "        elif computer == \"scissors\" and player == \"paper\":\n",
-        "            print(\"Scissors cuts paper. The computer WINS!\")\n",
-        "            break\n",
+        "          print(\"Scissors cuts paper. The computer WINS!\")\n",
+        "          break\n",
         "        elif computer == \"paper\" and player == \"rock\":\n",
-        "            print(\"Paper wraps rock. The computer WINS! \")\n",
-        "            break\n",
+        "          print(\"Paper wraps rock. The computer WINS! \")\n",
+        "          break\n",
         "    return champ\n",
         "\n",
         "\n",
@@ -104,7 +105,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTMUK7cAEOh2mXjk9F5vHO",
+      "authorship_tag": "ABX9TyMrHI+BTynF/t4zqeB/8azj",
       "include_colab_link": true
     },
     "kernelspec": {
